# PicMover_server

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-windows.yml  windows.yml
cmake/: version.cmake  version.hxx.in
src/: backup_manager.cxx  backup_manager.hxx  config.cxx  config.hxx  connect_dialog.cxx  connect_dialog.hxx  file_content.hxx  http_server.cxx  http_server.hxx  main.cxx  main_window.cxx  main_window.hxx  receive_page.cxx  receive_page.hxx  utility.cxx  utility.hxx
